增加SBA配置并测试

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <modules>
         <module>netty-springboot-client</module>
         <module>netty-springboot-server</module>
+        <module>netty-springboot-monitor</module>
     </modules>
     <!--项目依赖管理-->
         <dependencies>
