--- a/netty-springboot-client/src/main/resources/application.properties
+++ b/netty-springboot-client/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=netty-sb-client
 server.port=8082
 management.security.enabled=false
+spring.boot.admin.url=http://127.0.0.1:8888
