---增加swagger相关配置 ---增加web发送测试

--- a/netty-springboot-server/src/main/resources/application.properties
+++ b/netty-springboot-server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=netty-sb-server
+# ÊÇ·ñ´ò¿ªswagger
+swagger.enable = true
 server.port=8081
 management.security.enabled=false
 spring.boot.admin.url=http://127.0.0.1:8888
