--- a/netty-springboot-server/pom.xml
+++ b/netty-springboot-server/pom.xml
@@ -34,7 +34,12 @@
                 <artifactId>netty-all</artifactId>
                 <version>4.1.30.Final</version>
             </dependency>
-
+            <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.47</version>
+            </dependency>
             <dependency>
                 <groupId>com.sohu</groupId>
                 <artifactId>idcenter</artifactId>
